tests/baselines/reference/paramTagOnFunctionUsingArguments.errors.txt
tests/cases/conformance/jsdoc/a.js(2,20): error TS8029: JSDoc '...' must appear on the last @param tag of a function that uses 'arguments'.
tests/cases/conformance/jsdoc/a.js(19,9): error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.


==== tests/cases/conformance/jsdoc/decls.d.ts (0 errors) ====
    declare function factory(type: string): {};
==== tests/cases/conformance/jsdoc/a.js (2 errors) ====
    /**
     * @param {string} first
                       ~~~~~
!!! error TS8029: JSDoc '...' must appear on the last @param tag of a function that uses 'arguments'.
     */
    function concat(/* first, second, ... */) {
      var s = ''
      for (var i = 0, l = arguments.length; i < l; i++) {
        s += arguments[i]
      }
      return s
    }
    
    /**
     * @param {...string} strings
     */
    function correct() {
        arguments
    }
    
    correct(1,2,3) // oh no
            ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
    